Closed Bug 123768 Opened 23 years ago Closed 23 years ago

Unsubscribing while headers downloading hangs

Categories

(SeaMonkey :: MailNews: Message Display, defect)

x86
All
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: markh, Assigned: markh)

References

Details

Attachments

(1 file)

To repro: * Subscribe to a newsgroup with many articles. * In the newsgroup pane, right-click on the newly subscribed newsgroup * Mozilla starts downloading headers. If "how many headers" dialog appears, select "All Headers". * Mozilla displays context menu - select "Unsubscribe" * Confirmation dialog - select "Yes". Assuming that the headers are still being downloaded as you confirm the unsubscribe, Mozilla will hang on Windows. Linux has a similar problem - however, instead of being truly hung, it is possible to click the "Stop" button and have Mozilla come back to life. Under Windows, Stop does not do anything (the entire GUI has hung). On a Windows debug build, I tracked down the problem. It seems that nsNNTPProtocol::ReadXover() always returns a success code, even when m_newsgroupList->ProcessXOVERLINE() fails. This means that the main state loop always remains in the NNTP_XOVER state, causing an infinite loop in nsNNTPProtocol::ProcessProtocolState(). Attaching a patch that solves the problem for me.
Blocks: 123569
Comment on attachment 68094 [details] [diff] [review] Proposed patch r=hwaara You might want to trade that tab to spaces, though.
Attachment #68094 - Flags: review+
BTW, I've got a hunch that this may fix some other hang bugreports we have. I just emailed sspitzer an sr= request.
Seth is on vacation. CCing other super-reviewers ... please take a look at Mark's fix.
Comment on attachment 68094 [details] [diff] [review] Proposed patch sr=mscott Per the reviewer's guidelines on mozilla.org, please don't cc super reviewers and ask for a review. Send email directly as the guidelines specify. Thanks.
Attachment #68094 - Flags: superreview+
Mark, do you need help checking this in, or will you do it yourself?
Taking. Will check in as soon as the tree opens.
Assignee: sspitzer → mhammond
Checking in nsNNTPProtocol.cpp; /cvsroot/mozilla/mailnews/news/src/nsNNTPProtocol.cpp,v <-- nsNNTPProtocol.cpp new revision: 1.311; previous revision: 1.310 done
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Note to QA: this could potentially fix other hang bugs that are reported.
Verified FIXED with RedHat 7.2 - 2002-02-12-08 Mac OS X 10.1.2 - 2002-02-12-03 Windows 2K - 2002-12-03 Mark, nice fix.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
Component: MailNews: Subscribe → MailNews: Message Display
QA Contact: stephend → search
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: