Fix bug 123768 - Unsubscribing while headers downloading hangs. r=hwaara/sr=mscott.